define the video path in the first cell

--- a/ConvNet/data_analysis_lola.ipynb
+++ b/ConvNet/data_analysis_lola.ipynb
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -21,28 +23,26 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "import glob\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "vid1_dir = '/mnt/Oakland-Apr20/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['{\"c\":1', 's:90', 'time:\"1492552270412\"', 't:93', 'device_id:\"B827EB0431DA\"}']\n",
+      "['{\"c\":1' 's:90' 'time:\"1492552270412\"' 't:93' 'device_id:\"B827EB0431DA\"}']\n",
       "Example of log file data:  {\"c\":1 |  s:90 | time:\"1492552270412\" |  t:93\n",
-      "Dataset size (vid1): 9022\n"
+      "Dataset size (vid1): 9021\n"
      ]
     }
    ],
    "source": [
-    "vid1_dir = '/root/Videos/Oakland-Apr20/' #'data/oakland170418/'\n",
-    "\n",
-    "\n",
     "log_vid1 = []\n",
     "\n",
     "#with open(vid1_dir+'1492543329.txt', 'r') as csvfile:\n",
